# stonefish_slam

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  P4_FLAGS.md  PARAMETER_TUNING.md  PLAN.md  README.md  TROUBLESHOOTING.md  conftest.py  package.xml  pytest.ini  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docs.yml
config/: dead_reckoning.yaml  factor_graph.yaml  feature.yaml  kalman.yaml  localization.yaml  mapping.yaml  slam.yaml  sonar.yaml  test_mapping.yaml
config/mapping/: method_iwlo.yaml  method_log_odds.yaml  method_weighted_avg.yaml
docker/: .env.example  Dockerfile  compose.yaml  entrypoint.sh
docs/: CONVENTIONS.md  RUN_TEST.md
docs/site/: mkdocs.yml
docs/site/docs/: index.md  status.md
docs/site/docs/architecture/: frames.md  index.md  nodes-topics.md
docs/site/docs/assets/stylesheets/: extra.css
docs/site/docs/getting-started/: index.md  installation.md  running.md
docs/site/docs/methodology/: factor-graph.md  feature-cfar.md  index.md  localization.md  mapping.md
docs/site/docs/parameters/: index.md  localization-graph.md  mapping.md  sonar-feature.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/stonefish_slam/lib/stonefish_slam/: dead_reckoning_node  mapping_2d_standalone  mapping_3d_standalone
install/stonefish_slam/local/lib/python3.10/dist-packages/stonefish_slam/: __init__.py
install/stonefish_slam/local/lib/python3.10/dist-packages/stonefish_slam-0.1.0-py3.10.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  top_level.txt
install/stonefish_slam/local/lib/python3.10/dist-packages/stonefish_slam/core/: __init__.py  cfar.py  dead_reckoning.py  factor_graph.py  feature_extraction.py  kalman.py  localization.py  mapping_2d.py  mapping_3d.py  octree.py  slam.py  slam_legacy.py  types.py
install/stonefish_slam/local/lib/python3.10/dist-packages/stonefish_slam/cpp/: __init__.py  cfar.cpp  dda_traversal.cpp  dda_traversal.h  octree_mapping.cpp  octree_mapping.h  pcl.cpp  pcl.py  ray_processor.cpp  ray_processor.h
install/stonefish_slam/local/lib/python3.10/dist-packages/stonefish_slam/cpp/pybind11/: .appveyor.yml  .clang-format  .clang-tidy  .cmake-format.yaml  .codespell-ignore-lines  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CMakeLists.txt  CMakePresets.json  LICENSE  README.rst  SECURITY.md  noxfile.py  pyproject.toml
install/stonefish_slam/local/lib/python3.10/dist-packages/stonefish_slam/nodes/: __init__.py  dead_reckoning_node.py  kalman_node.py  mapping_2d_standalone_node.py  mapping_3d_standalone_node.py  slam_node.py
install/stonefish_slam/local/lib/python3.10/dist-packages/stonefish_slam/utils/: __init__.py  conversions.py  fusion.py  io.py  profiler.py  sonar.py  topics.py  visualization.py
install/stonefish_slam/share/ament_index/resource_index/package_run_dependencies/: stonefish_slam
install/stonefish_slam/share/ament_index/resource_index/parent_prefix_path/: stonefish_slam
install/stonefish_slam/share/stonefish_slam/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/stonefish_slam/share/stonefish_slam/cmake/: stonefish_slamConfig-version.cmake  stonefish_slamConfig.cmake
install/stonefish_slam/share/stonefish_slam/config/: dead_reckoning.yaml  factor_graph.yaml  feature.yaml  icp.yaml  localization.yaml  mapping.yaml  slam.yaml  sonar.yaml
install/stonefish_slam/share/stonefish_slam/environment/: ament_prefix_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/stonefish_slam/share/stonefish_slam/launch/: dead_reckoning.launch.py  localization.launch.py  mapping.launch.py  mapping_2d_standalone.launch.py  mapping_3d_standalone.launch.py  slam.launch.py
install/stonefish_slam/share/stonefish_slam/rviz/: stonefish_slam.rviz
launch/: dead_reckoning.launch.py  feature_extraction.launch  feature_extraction.launch.py  feature_extraction_sim.launch  feature_extraction_sim.launch.py  feature_extraction_standalone.launch.py  fft_localization_standalone.launch.py  kalman_and_deadreckoning.launch  localization.launch.py  mapping.launch.py  mapping_2d_standalone.launch.py  mapping_3d_standalone.launch.py  mapping_3d_test.launch.py  mapping_combined_standalone.launch.py  only_dead_reckoning.launch  only_kalman.launch  slam.launch.py  slam_sim.launch  slam_sim.launch.py  slam_sim_test.launch.py
log/: latest_build
rviz/: dead_reckoning.rviz  feature_extraction.rviz  kalman.rviz  kalman_and_deadreckoning.rviz  stonefish_slam.rviz
scripts/: README.md  dead_reckoning_node.py  diagnose_center_dip.py  feature_extraction_node.py  feature_extraction_node_sim.py  kalman_node.py  odom2path.py  slam_node.py
stonefish_slam/: CFAR.py  __init__.py  dead_reckoning_node.py  feature_extraction.py  feature_extraction_node_sim.py  feature_extraction_sim.py  kalman.py  kalman_node.py  pcl.py  pcl_test.py  slam.py  slam_node.py  slam_ros.py  sonar.py
stonefish_slam/core/: __init__.py  cfar.py  dead_reckoning.py  depth.py  factor_graph.py  feature_extraction.py  feature_extraction_sim.py  kalman.py  kalman_filter.py  localization.py  localization_fft.py  mapping_2d.py  mapping_3d.py  octree.py  slam.py  slam_legacy.py  slam_objects.py  slam_ros.py  types.py
stonefish_slam/cpp/: __init__.py  cfar.cpp  dda_traversal.cpp  dda_traversal.h  octree_mapping.cpp  octree_mapping.h  pcl.cpp  pcl.py  ray_processor.cpp  ray_processor.h
stonefish_slam/nodes/: feature_extraction_node.py  fft_localization_node.py  kalman_node.py  mapping_2d_standalone_node.py  mapping_3d_standalone_node.py  mapping_3d_test_node.py  slam_node.py
stonefish_slam/sensors/: CFAR.py  sonar.py
stonefish_slam/test/: test_depth.py  test_factor_graph.py  test_fusion.py  test_kalman.py  test_mapping_3d_characterization.py  test_octree.py  test_pcl.py  test_wildcard_gate.py
stonefish_slam/utils/: __init__.py  conversions.py  fusion.py  io.py  profiler.py  sonar.py  topics.py  visualization.py
test/: static_import_gate.py
(+326 files in other folders)
